# reliable-echo-segment

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: cardiac_mamba.yaml  config.yaml  config_echonet.yaml  ood_config.yaml  schema.yaml  segmentation.yaml  skeletal.yaml  temporal_segmentation.yaml  unet_config.yaml
configs/datasets/: camus.yaml  echonet.yaml
configs/models/: cardiac_mamba.yaml  r2plus1d.yaml  segment_tracker.yaml  skeletal_tracker.yaml  temporal_segment_tracker.yaml  unet_tcm.yaml  vae_unet.yaml
notebooks/: 01_colab_run.ipynb
scripts/: evaluate.py  inference.py  inference_pytorch.py  train.py  tta.py
src/: __init__.py  calibration_split.py  dataset.py  dataset_echonet.py  eval_adaptive.py  eval_rcps.py  losses.py  proof_stratified.py  registry.py  trainer.py
src/analysis/: adaptive_calibration.py  eval_adaptive.py  eval_rcps.py  latent_profile.py  proof_stratified.py
src/core/: conformal.py
src/datasets/: __init__.py  camus.py  echonet.py  registry.py
src/inference/: export_onnx.py  inference_onnx.py  inference_pytorch.py  uncertainty.py  wrapper.py
src/losses/: __init__.py  consistency.py  cycle_consistency.py  distillation.py  dynamic_weighting.py  ef.py  geometric_smooth.py  log_volume_loss.py  segmentation_loss.py  semi_supervised.py  skeletal_loss.py  temporal_segmentation_loss.py  topology_loss.py  vae.py  volume_loss.py
src/models/: __init__.py  cardiac_mamba.py  dual_stream.py  mamba_wrapper.py  model.py  r2plus1d.py  registry.py  segment_tracker.py  skeletal_tracker.py  temporal.py  temporal_segment_tracker.py  temporal_shift.py  unet_2d.py  vae_unet.py
src/models/components/: temporal_memory.py
src/models/mamba2/: __init__.py  block.py  ssd.py  vss.py
src/tta/: __init__.py  auditor.py  augmentations.py  conformal.py  engine.py  integrated_demo.py
src/utils/: __init__.py  config_loader.py  dist.py  logging.py  metric.py  plot.py  postprecessing.py  runner.py  simpson.py  util_.py
tests/: test_ef_uncertainty.py  verify_echonet_mask.py
