[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reliable-echo-segment"
version = "0.1.0"
description = "Reliable Echo Segmentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy>=1.26.4",
    "torchvision",
    "torchaudio",
    "monai[all]>=1.4.0",
    "nibabel",
    "scikit-image",
    "opencv-python-headless",
    "einops",
    "tqdm",
    "tensorboard",
    "matplotlib",
    "reportlab",
    "pandas",
    "pyyaml",
    "scikit-learn",
    "filelock>=3.15",
    "wandb",
    "timm",
    "onnx>=1.16.0",
    "onnxscript>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"